# Sensor-Fusion-in-SystemC

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  gitignore
include/: config.h  telemetry.h  top.h  types.h
src/: main.cpp  telemetry.cpp  top.cpp
